force-app/main/default/objects/Doctor_c__x/Doctor_c__x.object-meta.xml
<CustomObject>
    <externalDataSource>ExternalDoctorData</externalDataSource>
    <externalName>Doctor__c</externalName>
    <label>Doctor</label>
    <pluralLabel>Doctors</pluralLabel>
</CustomObject>