force-app/main/default/objects/Doctor_c__x/fields/Birthday_Month_c__c.field-meta.xml
<CustomField>
    <fullName>Birthday_Month_c__c</fullName>
    <externalDeveloperName>Birthday_Month__c</externalDeveloperName>
    <label>Birthday Month</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>