force-app/main/default/objects/Doctor_c__x/fields/City_c__c.field-meta.xml
<CustomField>
    <fullName>City_c__c</fullName>
    <externalDeveloperName>City__c</externalDeveloperName>
    <label>City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>