force-app/main/default/objects/Doctor_c__x/fields/Country_c__c.field-meta.xml
<CustomField>
    <fullName>Country_c__c</fullName>
    <externalDeveloperName>Country__c</externalDeveloperName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Spain</fullName>
            </value>
            <value>
                <fullName>Poland</fullName>
            </value>
            <value>
                <fullName>USA</fullName>
            </value>
            <value>
                <fullName>England</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>