force-app/main/default/objects/Doctor_c__x/fields/DateBorn_c__c.field-meta.xml
<CustomField>
    <fullName>DateBorn_c__c</fullName>
    <externalDeveloperName>DateBorn__c</externalDeveloperName>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>