force-app/main/default/objects/Doctor_c__x/fields/Doctor_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Name_c__c</fullName>
    <externalDeveloperName>Doctor_Name__c</externalDeveloperName>
    <label>Doctor Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>