force-app/main/default/objects/Doctor_c__x/fields/First_Name_c__c.field-meta.xml
<CustomField>
    <fullName>First_Name_c__c</fullName>
    <externalDeveloperName>First_Name__c</externalDeveloperName>
    <label>First Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>