force-app/main/default/objects/Doctor_c__x/fields/Geolocation_Latitude_s__c.field-meta.xml
<CustomField>
    <fullName>Geolocation_Latitude_s__c</fullName>
    <externalDeveloperName>Geolocation__Latitude__s</externalDeveloperName>
    <label>Geolocation (Latitude)</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>