force-app/main/default/objects/Doctor_c__x/fields/Geolocation_Longitude_s__c.field-meta.xml
<CustomField>
    <fullName>Geolocation_Longitude_s__c</fullName>
    <externalDeveloperName>Geolocation__Longitude__s</externalDeveloperName>
    <label>Geolocation (Longitude)</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>