force-app/main/default/objects/Doctor_c__x/fields/Licence_Number_c__c.field-meta.xml
<CustomField>
    <fullName>Licence_Number_c__c</fullName>
    <externalDeveloperName>Licence_Number__c</externalDeveloperName>
    <label>Licence Number</label>
    <length>14</length>
    <type>Text</type>
</CustomField>