force-app/main/default/objects/Doctor_c__x/fields/Next_Birthday_c__c.field-meta.xml
<CustomField>
    <fullName>Next_Birthday_c__c</fullName>
    <externalDeveloperName>Next_Birthday__c</externalDeveloperName>
    <label>Next Birthday</label>
    <type>Date</type>
</CustomField>