force-app/main/default/objects/Doctor_c__x/fields/Phone_number_c__c.field-meta.xml
<CustomField>
    <fullName>Phone_number_c__c</fullName>
    <externalDeveloperName>Phone_number__c</externalDeveloperName>
    <label>Phone number</label>
    <type>Phone</type>
</CustomField>