force-app/main/default/objects/Doctor_c__x/fields/Photo_c__c.field-meta.xml
<CustomField>
    <fullName>Photo_c__c</fullName>
    <externalDeveloperName>Photo__c</externalDeveloperName>
    <label>Photo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>