force-app/main/default/objects/Doctor_c__x/fields/Receive_Birthday_Emails_c__c.field-meta.xml
<CustomField>
    <fullName>Receive_Birthday_Emails_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Receive_Birthday_Emails__c</externalDeveloperName>
    <label>Receive Birthday Emails</label>
    <type>Checkbox</type>
</CustomField>